Adjust filter to include sources of ASM commons in shaded jar.

--- a/byte-buddy/pom.xml
+++ b/byte-buddy/pom.xml
@@ -123,16 +123,16 @@
                                 <filter>
                                     <artifact>org.ow2.asm:asm-commons</artifact>
                                     <includes>
-                                        <include>org/objectweb/asm/commons/AnnotationRemapper.class</include>
-                                        <include>org/objectweb/asm/commons/ClassRemapper.class</include>
-                                        <include>org/objectweb/asm/commons/FieldRemapper.class</include>
-                                        <include>org/objectweb/asm/commons/MethodRemapper.class</include>
-                                        <include>org/objectweb/asm/commons/ModuleHashesAttribute.class</include>
-                                        <include>org/objectweb/asm/commons/ModuleRemapper.class</include>
-                                        <include>org/objectweb/asm/commons/RecordComponentRemapper.class</include>
-                                        <include>org/objectweb/asm/commons/Remapper.class</include>
-                                        <include>org/objectweb/asm/commons/SignatureRemapper.class</include>
-                                        <include>org/objectweb/asm/commons/SimpleRemapper.class</include>
+                                        <include>org/objectweb/asm/commons/AnnotationRemapper.**</include>
+                                        <include>org/objectweb/asm/commons/ClassRemapper.**</include>
+                                        <include>org/objectweb/asm/commons/FieldRemapper.**</include>
+                                        <include>org/objectweb/asm/commons/MethodRemapper.**</include>
+                                        <include>org/objectweb/asm/commons/ModuleHashesAttribute.**</include>
+                                        <include>org/objectweb/asm/commons/ModuleRemapper.**</include>
+                                        <include>org/objectweb/asm/commons/RecordComponentRemapper.**</include>
+                                        <include>org/objectweb/asm/commons/Remapper.**</include>
+                                        <include>org/objectweb/asm/commons/SignatureRemapper.**</include>
+                                        <include>org/objectweb/asm/commons/SimpleRemapper.**</include>
                                     </includes>
                                 </filter>
                             </filters>
