--- a/byte-buddy-android/pom.xml
+++ b/byte-buddy-android/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>byte-buddy-parent</artifactId>
         <groupId>net.bytebuddy</groupId>
-        <version>1.10.11-SNAPSHOT</version>
+        <version>1.10.11</version>
     </parent>
 
     <artifactId>byte-buddy-android</artifactId>
