Fix dynamic constant argument validation to consider that constantdynamic now allows constants of any types.

--- a/pom.xml
+++ b/pom.xml
@@ -554,6 +554,22 @@
                 <bytebuddy.experimental>true</bytebuddy.experimental>
             </properties>
         </profile>
+        <!-- Runs the build with compatibility for Java 15 JVMs. -->
+        <profile>
+            <id>java16-compatibility</id>
+            <activation>
+                <activeByDefault>false</activeByDefault>
+                <jdk>16</jdk>
+            </activation>
+            <properties>
+                <sourcecode.main.version>8</sourcecode.main.version>
+                <sourcecode.test.version>8</sourcecode.test.version>
+                <bytecode.main.version>8</bytecode.main.version>
+                <bytecode.test.version>8</bytecode.test.version>
+                <jacoco.skip>true</jacoco.skip>
+                <bytebuddy.experimental>true</bytebuddy.experimental>
+            </properties>
+        </profile>
         <!-- Builds using a byte code target for Java 6. -->
         <profile>
             <id>java6</id>
@@ -660,6 +676,18 @@
         <!-- Builds using a byte code target for Java 15. -->
         <profile>
             <id>java15</id>
+            <activation>
+                <activeByDefault>false</activeByDefault>
+            </activation>
+            <properties>
+                <bytecode.main.version>15</bytecode.main.version>
+                <bytecode.test.version>15</bytecode.test.version>
+                <spotbugs.skip>true</spotbugs.skip>
+            </properties>
+        </profile>
+        <!-- Builds using a byte code target for Java 16. -->
+        <profile>
+            <id>java16</id>
             <activation>
                 <activeByDefault>false</activeByDefault>
             </activation>
