--- a/byte-buddy-benchmark/pom.xml
+++ b/byte-buddy-benchmark/pom.xml
@@ -135,6 +135,7 @@
                                         <filter>
                                             <artifact>*:*</artifact>
                                             <excludes>
+                                                <exclude>META-INF/MANIFEST.MF</exclude>
                                                 <exclude>**/module-info.class</exclude>
                                             </excludes>
                                         </filter>
