--- a/pom.xml
+++ b/pom.xml
@@ -61,7 +61,7 @@
         <pitest.target>net.bytebuddy</pitest.target>
         <asm.url>https://asm.ow2.io</asm.url>
         <version.asm>8.0.1</version.asm>
-        <version.junit>4.12</version.junit>
+        <version.junit>4.13</version.junit>
         <version.mockito>2.23.0</version.mockito>
         <version.plugin.clean>3.0.0</version.plugin.clean>
         <version.plugin.bundle>3.5.0</version.plugin.bundle>
@@ -70,7 +70,7 @@
         <version.plugin.deploy>2.8.2</version.plugin.deploy>
         <version.plugin.javadoc>2.10.4</version.plugin.javadoc>
         <version.plugin.source>3.0.1</version.plugin.source>
-        <version.plugin.shade>3.3.0-SNAPSHOT</version.plugin.shade>
+        <version.plugin.shade>3.2.4</version.plugin.shade>
         <version.plugin.gpg>1.6</version.plugin.gpg>
         <version.plugin.jxr>2.5</version.plugin.jxr>
         <version.plugin.buildhelp>1.12</version.plugin.buildhelp>
