Add resource directory to resources

--- a/byte-buddy-maven-plugin/pom.xml
+++ b/byte-buddy-maven-plugin/pom.xml
@@ -93,6 +93,9 @@
     <build>
         <resources>
             <resource>
+                <directory>src/main/resources</directory>
+            </resource>
+            <resource>
                 <directory>..</directory>
                 <targetPath>META-INF</targetPath>
                 <filtering>true</filtering>
