--- a/byte-buddy-gradle-plugin/main.gradle
+++ b/byte-buddy-gradle-plugin/main.gradle
@@ -1,3 +1,6 @@
+import java.util.regex.Pattern
+import net.bytebuddy.build.gradle.transform.GradleTypeTransformer
+
 ext.pom = new XmlSlurper().parse(file('./pom.xml'))
 ext.outerPom = new XmlSlurper().parse(file('../pom.xml'))
 
@@ -44,9 +47,16 @@ repositories {
 
 // Without the extras property, creating a javadoc artifact is not necessary.
 if (Boolean.getBoolean('net.bytebuddy.misc.extras')) {
-    task javadocJar(type: Jar, dependsOn: javadoc) {
-        classifier = 'javadoc'
-        from javadoc.destinationDir
+    if (gradle.gradleVersion.startsWith("2.")) { // support legacy version
+        task javadocJar(type: Jar, dependsOn: javadoc) {
+            archiveClassifier.set('javadoc')
+            from javadoc.destinationDir
+        }
+    } else {
+        task javadocJar(type: Jar, dependsOn: javadoc) {
+            classifier = 'javadoc'
+            from javadoc.destinationDir
+        }
     }
 } else {
     task javadocJar {
@@ -63,7 +73,7 @@ task copyLicense(type: Copy) {
     from '..'
     include 'LICENSE', 'NOTICE'
     into "$buildDir/resources/main/META-INF"
-    def pattern = java.util.regex.Pattern.compile('\\$\\{([a-zA-Z0-9\\-._]+)}')
+    def pattern = Pattern.compile('\\$\\{([a-zA-Z0-9\\-._]+)}')
     filter { String line ->
         def matcher = pattern.matcher(line)
         def buffer = new StringBuffer()
@@ -88,3 +98,11 @@ task copyLicense(type: Copy) {
 }
 
 jar.dependsOn copyLicense
+
+jar.doLast {
+    new GradleTypeTransformer().transform(jar.archivePath)
+}
+
+validatePlugins {
+    enabled = false
+}
