--- a/byte-buddy-gradle-plugin/main.gradle
+++ b/byte-buddy-gradle-plugin/main.gradle
@@ -109,13 +109,25 @@ if (gradle.gradleVersion.startsWith("2.")) { // support legacy version
     }
 }
 
-gradlePlugin {
-    plugins {
-        byteBuddyPlugin {
-            id = pom.parent.groupId.text().toString() + '.' + pom.artifactId.text().toString()
-            displayName = pom.name.text().toString()
-            description = pom.description.text().toString()
-            implementationClass = 'net.bytebuddy.build.gradle.ByteBuddyPlugin'
+if (gradle.gradleVersion.startsWith("2.")) { // support legacy version
+    gradlePlugin {
+        plugins {
+            byteBuddyPlugin {
+                id = pom.parent.groupId.text().toString() + '.' + pom.artifactId.text().toString()
+                description = pom.description.text().toString()
+                implementationClass = 'net.bytebuddy.build.gradle.ByteBuddyPlugin'
+            }
+        }
+    }
+} else {
+    gradlePlugin {
+        plugins {
+            byteBuddyPlugin {
+                id = pom.parent.groupId.text().toString() + '.' + pom.artifactId.text().toString()
+                displayName = pom.name.text().toString()
+                description = pom.description.text().toString()
+                implementationClass = 'net.bytebuddy.build.gradle.ByteBuddyPlugin'
+            }
         }
     }
 }
