--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,6 +20,7 @@ jobs:
         run: |
           . ./.github/scripts/install-jdk.sh --feature ea --os linux-x64
           ./mvnw verify -Pjava15 -Dnet.bytebuddy.experimental=true
+        continue-on-error: true
   hotspot-supported:
     name: HotSpot (supported)
     strategy:
