--- a/pom.xml
+++ b/pom.xml
@@ -370,11 +370,11 @@
     <distributionManagement>
         <snapshotRepository>
             <id>central</id>
-            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+            <url>${nexus.url}/content/repositories/snapshots</url>
         </snapshotRepository>
         <repository>
             <id>central</id>
-            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+            <url>${nexus.url}/service/local/staging/deploy/maven2</url>
         </repository>
     </distributionManagement>
 
