Update spotbugs and run config.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
         run: |
           . ./.github/scripts/install-jdk.sh --feature ea --os linux-x64
           export MAVEN_OPTS="--add-opens java.base/java.lang=ALL-UNNAMED"
-          ./mvnw verify -Pjava16 -Dnet.bytebuddy.experimental=true
+          ./mvnw verify -Pjava17
         continue-on-error: true
   hotspot-supported:
     name: HotSpot (supported)
@@ -55,7 +55,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        java: [7, 9, 10, 12, 13]
+        java: [7, 9, 10, 12, 13, 14]
         experimental: [ false ]
         include:
           - java: 16-ea
