--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,7 +34,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-18.04, macOS-10.15, windows-2019]
-        java: [8, 11, 15]
+        java: [8, 11, 16]
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v2
@@ -77,7 +77,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        java: [7, 9, 10, 12, 13, 14]
+        java: [7, 9, 10, 12, 13, 14, 15]
     runs-on: ubuntu-18.04
     steps:
       - uses: actions/checkout@v2
