--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,7 +44,7 @@ jobs:
           key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
           restore-keys: |
             ${{ runner.os }}-maven-
-      - uses: actions/setup-java@v1
+      - uses: actions/setup-java@v2
         with:
           java-version: ${{ matrix.java }}
           architecture: x64
@@ -66,7 +66,7 @@ jobs:
           key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
           restore-keys: |
             ${{ runner.os }}-maven-
-      - uses: actions/setup-java@v1
+      - uses: actions/setup-java@v2
         with:
           java-version: ${{ matrix.java }}
           architecture: x86
@@ -87,20 +87,24 @@ jobs:
           key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
           restore-keys: |
             ${{ runner.os }}-maven-
-      - uses: actions/setup-java@v1
+      - uses: actions/setup-java@v2
         with:
           java-version: ${{ matrix.java }}
           architecture: x64
+      - uses: actions/upload-artifact@v2
+        if: ${{ failure() }}
+        with:
+          name: dumpfile
+          path: |
+            /home/runner/work/byte-buddy/byte-buddy/byte-buddy-dep/target/surefire-reports/*.dumpstream
       - name: Build project
-        run: |
-          ./mvnw verify -Pintegration -Pjava${{ matrix.java }}
-          cat /home/runner/work/byte-buddy/byte-buddy/byte-buddy-dep/target/surefire-reports/*
+        run: ./mvnw verify -Pintegration -Pjava${{ matrix.java }}
   hotspot-legacy:
     name: HotSpot (legacy)
     runs-on: ubuntu-18.04
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-java@v1
+      - uses: actions/setup-java@v2
         with:
           java-version: 1.6
           architecture: x64
@@ -138,7 +142,7 @@ jobs:
           key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
           restore-keys: |
             ${{ runner.os }}-maven-
-      - uses: actions/setup-java@v1
+      - uses: actions/setup-java@v2
         with:
           java-version: 8
           architecture: x64
@@ -150,7 +154,7 @@ jobs:
     needs: [coverage]
     if: github.event_name == 'push' && startsWith(github.event.head_commit.message, '[release]')
     steps:
-      - uses: actions/setup-java@v1
+      - uses: actions/setup-java@v2
         with:
           java-version: 8
           architecture: x64
