--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,8 +20,7 @@ jobs:
         with:
           path: ~/.m2/repository
           key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
-          restore-keys: |
-            ${{ runner.os }}-maven-
+          restore-keys: ${{ runner.os }}-maven-
       - uses: actions/setup-java@v2
         with:
           java-version: 17-ea
@@ -47,8 +46,7 @@ jobs:
         with:
           path: ~/.m2/repository
           key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
-          restore-keys: |
-            ${{ runner.os }}-maven-
+          restore-keys: ${{ runner.os }}-maven-
       - uses: actions/setup-java@v2
         with:
           java-version: ${{ matrix.java }}
@@ -70,12 +68,11 @@ jobs:
         with:
           path: ~/.m2/repository
           key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
-          restore-keys: |
-            ${{ runner.os }}-maven-
+          restore-keys: ${{ runner.os }}-maven-
       - uses: actions/setup-java@v2
         with:
           java-version: ${{ matrix.java }}
-          distribution: 'adopt-hotspot'
+          distribution: zulu
           architecture: x86
       - name: Build project
         run: ./mvnw verify -Pintegration -Pjava${{ matrix.java }}
@@ -84,7 +81,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        java: [7, 9, 10, 12, 13, 14, 15]
+        java: [9, 10, 12, 13, 14, 15]
     runs-on: ubuntu-18.04
     steps:
       - uses: actions/checkout@v2
@@ -92,12 +89,11 @@ jobs:
         with:
           path: ~/.m2/repository
           key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
-          restore-keys: |
-            ${{ runner.os }}-maven-
+          restore-keys: ${{ runner.os }}-maven-
       - uses: actions/setup-java@v2
         with:
           java-version: ${{ matrix.java }}
-          distribution: 'adopt-hotspot'
+          distribution: adopt-hotspot
           architecture: x64
       - uses: actions/upload-artifact@v2
         if: ${{ failure() }}
@@ -109,13 +105,17 @@ jobs:
         run: ./mvnw verify -Pintegration -Pjava${{ matrix.java }}
   hotspot-legacy:
     name: HotSpot (legacy)
+    strategy:
+      fail-fast: false
+      matrix:
+        java: [6, 7]
     runs-on: ubuntu-18.04
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-java@v2
         with:
-          java-version: 1.6
-          distribution: 'adopt-hotspot'
+          java-version: ${{ matrix.java }}
+          distribution: zulu
           architecture: x64
       - name: Build project
         run: ./mvnw -s .mvn/nossl.settings.xml verify -Pintegration -Pjava6
@@ -130,12 +130,11 @@ jobs:
         with:
           path: ~/.m2/repository
           key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
-          restore-keys: |
-            ${{ runner.os }}-maven-
+          restore-keys: ${{ runner.os }}-maven-
       - uses: actions/setup-java@v2
         with:
           java-version: 8
-          distribution: 'adopt-hotspot'
+          distribution: adopt-hotspot
           architecture: x64
       - name: Build project
         run: ./mvnw jacoco:prepare-agent verify jacoco:report coveralls:report -DrepoToken=${{ secrets.coveralls }} -Pintegration
@@ -148,7 +147,7 @@ jobs:
       - uses: actions/setup-java@v2
         with:
           java-version: 8
-          distribution: 'adopt-hotspot'
+          distribution: adopt-hotspot
           architecture: x64
       - name: Publish new version
         run: |
