Moved upload instruction.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,7 +30,7 @@ jobs:
         run: |
           export MAVEN_OPTS="--add-opens java.base/java.lang=ALL-UNNAMED"
           ./mvnw verify -Pjava17 -Dnet.bytebuddy.experimental=true
-        continue-on-error: true
+        continue-on-error: false
   any-supported:
     name: Any (supported)
     strategy:
@@ -111,13 +111,13 @@ jobs:
           java-version: ${{ matrix.java }}
           distribution: zulu
           architecture: x64
+      - name: Build project
+        run: ./mvnw -s .mvn/nossl.settings.xml verify -Pintegration -Pjava${{ matrix.java }}
       - uses: actions/upload-artifact@v2
         if: ${{ failure() }}
         with:
           name: dumpfile
           path: /home/runner/work/byte-buddy/byte-buddy/byte-buddy-dep/target/surefire-reports/*.dumpstream
-      - name: Build project
-        run: ./mvnw -s .mvn/nossl.settings.xml verify -Pintegration -Pjava6
   coverage:
     name: Coverage
     runs-on: ubuntu-18.04
