Replace file path with class name.

--- a/byte-buddy-dep/pom.xml
+++ b/byte-buddy-dep/pom.xml
@@ -160,7 +160,7 @@
                         <artifactId>maven-surefire-plugin</artifactId>
                         <configuration>
                             <excludes>
-                                <exclude>net/bytebuddy/pool/TypePoolDefaultAnnotationDescriptionTest.java</exclude>
+                                <exclude>net.bytebuddy.pool.TypePoolDefaultAnnotationDescriptionTest</exclude>
                             </excludes>
                         </configuration>
                     </plugin>
