--- a/byte-buddy-dep/pom.xml
+++ b/byte-buddy-dep/pom.xml
@@ -155,12 +155,13 @@
             </activation>
             <build>
                 <plugins>
-                    <!-- Zulu sometimes yields a segfault when processing annotation descriptions on OpenJDK 7. -->
+                    <!-- Zulu sometimes yields a segfault when processing annotation descriptions on some OpenJDK 7. -->
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-surefire-plugin</artifactId>
                         <configuration>
                             <excludes>
+                                <exclude>net.bytebuddy.agent.builder.AgentBuilderDefaultApplicationTest</exclude>
                                 <exclude>net.bytebuddy.pool.TypePoolDefaultAnnotationDescriptionTest</exclude>
                             </excludes>
                         </configuration>
